Wed Apr 23 13:19:58 CEST 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in =../2 involving FD variables

Fri Mar 21 14:09:26 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in arithmetics (in float_{integer/fractional}_part)

Thu Mar  6 09:28:20 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in FD solver (wrong union with a singleton)

Tue Feb 25 16:48:12 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with the foreign C interface

Wed Feb 19 18:10:22 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* change configure.in: by default ebp is not used

Mon Feb 17 13:45:05 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix a but with CTRL+C handler not reinstalled

Wed Jan  8 15:22:09 CET 2003 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with _XXX (re)displayed under the top-level

Mon Dec 16 13:00:42 CET 2002 <Daniel.Diaz@univ-paris1.fr>

	* port to x86_64/linux - many thanks to:
	  Gwenole Beauchesne <gbeauchesne@mandrakesoft.com>

Mon Sep 30 22:08:41 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in predicate_property/2
	
Wed Sep 25 13:41:46 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* add new built-in fork_prolog/1 and create_pipe/2
	
Tue Sep 24 19:30:35 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in atom_concat/3

Thu Sep 19 12:53:45 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* fix bug when detecting if a stream can be repositioned

Thu Sep 12 18:45:10 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* fix bug in output to constant terms (e.g. write_to_atom/2)
	* include another additional patch for sockets under win32 - due to:
	  Brent Fulgham <brent.fulgham@xpsystems.com>
	* fix bug in bagof/3 with FD variables
	* fix bug with randomize/0

Fri Jun 21 18:32:06 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* added min/max to Prolog arithmetics

Thu Jun 20 15:20:43 CEST 2002 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs in current_predicate and predicate_property

Mon Jun 10 14:25:52 CEST 2002 <Daniel.Diaz@univ-paris1.fr>
