@@ -54,6 +54,9 @@ powerpc/Darwin (MacOS X).
 \item \MyEMail{gbeauchesne@mandrakesoft.com}{Gwenol\'{e} Beauchesne} for his port to
 x86\_64/Linux.
 
+\item \MyEMail{jtb@netbsd.org}{Jason Beegan} for his port to
+sparc/NetBSD and to powerpc/NetBSD.
+
 \end{itemize}
 
 Many thanks to all those people at \MyUrl{http://www.gnu.org}{GNU} who helped
