@@ -31,7 +31,10 @@
 /* Define if you have termios.h */
 #undef HAVE_TERMIOS_H
 
-/* Define if you have termios.h */
+/* Define if you have termio.h */
+#undef HAVE_TERMIO_H
+
+/* Define if you have malloc.h */
 #undef HAVE_MALLOC_H
 
 /* Define if you have a working `mmap' system call */
@@ -150,11 +153,17 @@
 /* Define if the system is a sparc/sunos */
 #undef M_sparc_sunos
 
+/* Define if the system is a sparc/bsd */
+#undef M_sparc_bsd
+
 /* Define if the system is a powerpc/linux */
 #undef M_powerpc_linux
 
-/* Define if the system is a powerpc/bsd */
+/* Define if the system is a powerpc/darwin */
 #undef M_powerpc_darwin
+
+/* Define if the system is a powerpc/bsd */
+#undef M_powerpc_bsd
 
 /* Define if the system is a x86-64/linux */
 #undef M_x86_64_linux
