@@ -171,7 +171,7 @@ Code_Start(char *label, int prolog, int global)
 {
   Label_Printf("");
   Inst_Printf(".align", "4");
-#ifdef M_sparc_solaris
+#if defined(M_sparc_solaris) || defined(M_sparc_bsd)
   Inst_Printf(".type", UN "%s,#function", label);
 #endif
   Inst_Printf(".proc", "020");
@@ -915,7 +915,7 @@ Dico_Long(char *name, int global, VType vtype, long value)
       break;
 
     case INITIAL_VALUE:
-#ifdef M_sparc_solaris
+#if defined(M_sparc_solaris) || defined(M_sparc_bsd)
       Inst_Printf(".type", UN "%s,#object", name);
       Inst_Printf(".size", UN "%s,4", name);
 #endif
