@@ -316,6 +316,7 @@ else
 		mips*irix*)      AC_DEFINE(M_mips_irix);;
 		sparc*sunos*)    AC_DEFINE(M_sparc_sunos);;
 		sparc*solaris*)  AC_DEFINE(M_sparc_solaris);;
+		sparc*bsd*)	 AC_DEFINE(M_sparc_bsd);;
 	        alpha*osf*)      AC_DEFINE(M_alpha_osf);;
 	        alpha*linux*)    AC_DEFINE(M_alpha_linux);;
 		i*86*linux*)     AC_DEFINE(M_ix86_linux);;
@@ -324,6 +325,7 @@ else
 		i*86*bsd*)       AC_DEFINE(M_ix86_bsd);;
         	powerpc*linux*)  AC_DEFINE(M_powerpc_linux);;
 		powerpc*darwin*) AC_DEFINE(M_powerpc_darwin);;
+		powerpc*bsd*)    AC_DEFINE(M_powerpc_bsd);;
 		*86*cygwin*)     AC_DEFINE(M_ix86_cygwin);;
 		x86_64*linux*)   AC_DEFINE(M_x86_64_linux);;
 		*)               AC_MSG_ERROR(unsupported architecture)
