@@ -1,5 +1,7 @@
 Change in GNU Prolog version 1.2.18:
 
+* port to sparc/NetBSD and powerpc/NetBSD - many thanks to:
+  Jason Beegan <jtb@netbsd.org>
 * fix bug in =../2 involving FD variables
 * fix a bug in arithmetics (in float_{integer/fractional}_part)
 * fix a bug in FD solver (wrong union with a singleton)
